# eessi-scout

./: .markdownlint.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  scorecards.yml  test.yml
src/eessi_scout/: __init__.py
tests/: test_placeholder.py
